Enable logs on desktop

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@
 # - Allows experimental WebGPU to work, including compute
 #   shaders necessary for `wonnx`
 RUSTFLAGS=--cfg=web_sys_unstable_apis
+
+# Enable to print all logs for desktop native applications
+RUST_LOG=info
