--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,20 @@
 language: rust
-sudo: false
 
 cache: cargo
 
-matrix:
+jobs:
   include:
 
-  # Builds with wasm-pack.
-  - rust: beta
+  # Build for both linux and OS X
+  - name: desktop
+    os:
+      - linux
+      - osx
+    rust: beta
     env: RUST_BACKTRACE=1
-    addons:
-      firefox: latest
-      chrome: stable
     before_script:
       - (test -x $HOME/.cargo/bin/cargo-install-update || cargo install cargo-update)
-      - (test -x $HOME/.cargo/bin/cargo-generate || cargo install --vers "^0.2" cargo-generate)
+      - (test -x $HOME/.cargo/bin/cargo-generate || cargo install cargo-generate)
       - cargo install-update -a
       - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh -s -- -f
       - cargo install just
@@ -24,32 +24,29 @@ matrix:
       # in any of our parent dirs is problematic.
       - mv Cargo.toml Cargo.toml.tmpl
       - cd testing
-      - wasm-pack build
-      - wasm-pack test --chrome --firefox --headless
+      - just desktop --release
 
-  # Builds on nightly.
-  - rust: nightly
+  - name: web
+    rust: beta
     env: RUST_BACKTRACE=1
+    addons:
+      firefox: latest-nightly
+      chrome: stable
     before_script:
       - (test -x $HOME/.cargo/bin/cargo-install-update || cargo install cargo-update)
-      - (test -x $HOME/.cargo/bin/cargo-generate || cargo install --vers "^0.2" cargo-generate)
+      - (test -x $HOME/.cargo/bin/cargo-generate || cargo install cargo-generate)
       - cargo install-update -a
-      - rustup target add wasm32-unknown-unknown
+      - curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh -s -- -f
+      - cargo install just
     script:
       - cargo generate --git . --name testing
       - mv Cargo.toml Cargo.toml.tmpl
       - cd testing
-      - cargo check
-      - cargo check --target wasm32-unknown-unknown
-      - cargo check                                 --no-default-features
-      - cargo check --target wasm32-unknown-unknown --no-default-features
-      - cargo check                                 --no-default-features --features console_error_panic_hook
-      - cargo check --target wasm32-unknown-unknown --no-default-features --features console_error_panic_hook
-      - cargo check                                 --no-default-features --features "console_error_panic_hook wee_alloc"
-      - cargo check --target wasm32-unknown-unknown --no-default-features --features "console_error_panic_hook wee_alloc"
+      - just web --release
 
-  # Builds on beta.
-  - rust: beta
+
+  - name: cargo-check
+    rust: beta
     env: RUST_BACKTRACE=1
     before_script:
       - (test -x $HOME/.cargo/bin/cargo-install-update || cargo install cargo-update)
