--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,8 @@ ndarray = "0.15.6"
 pollster = "0.3.0"
 tobj = { version = "3.2", features = ["async"] }
 winit = "0.28.2"
-wgpu = "0.15.0"
-
-#wonnx = "^0.4.0"
-# support for wgpu 0.15 in `wonnx` is not merged at the moment. We need our `wgpu`
-# version to match that of `wonnx`
-wonnx = { git = "https://github.com/webonnx/wonnx.git", branch = "chore/wgpu-0.15" }
+wgpu = "0.16.0"
+wonnx = "^0.5.0"
 
 [dependencies.image]
 version = "0.24"
